@@ -2,7 +2,9 @@ AUX snes9x-gtk-1.51_p61-as-needed.patch 813 RMD160 1dc8ddf0d63752e6dbd0874cb0d7f
 AUX snes9x-gtk-1.51_p61-string-literal.patch 1025 RMD160 4d5decabbf4ec384a5fda64c80de0d8aa80f1d1b SHA1 c877c669a415db8952e8f7bdb4975f4cc9e0233d SHA256 9a569adcb41b399bd7bed14215f53a4f7a86263ed17c494994e583aa360a7661
 DIST snes9x-1.51-src-gtk-73.tar.bz2 926543 RMD160 f9adc6e69a385a1b555d6beb305171edc66ba026 SHA1 0ec19d0694f2b65124c645eb29d6a18bf13ac574 SHA256 8297f989d39ac2cd47b089ed1d47d026e0fc7497387d207d9c72a587a6cb2f33
 DIST snes9x-1.51-src-gtk-74.tar.bz2 883019 RMD160 b851cd65400335b645b1c19257818b53f52a4fc2 SHA1 7eca2628d0a1dc5432a12feff84818e115b8cb32 SHA256 4d6248f634a3e2850cb1379c3506241a58f8e486ad093fc0b99f338f9d1c6d0f
+DIST snes9x-1.51-src-gtk-75.tar.bz2 885832 RMD160 7755bf44b7c655637d6ba8e2f2da861d34225599 SHA1 f106b6ed71d6295703ff42361f9a96d9b430f402 SHA256 b8d01ed7a3b76364e0eaa24a456ca458918c90be533d5034a97bcfdc9eff3e0b
 EBUILD snes9x-gtk-1.51_p73.ebuild 1253 RMD160 d9752b320d470a04501f0026441b15e3fceca773 SHA1 5d4ecb1880fd4e22e8c2befd1b0aae388b44b288 SHA256 cb71852050d75e23c3acd9b8364737b90117f003e29db17ab5f30c4735481e99
 EBUILD snes9x-gtk-1.51_p74.ebuild 1253 RMD160 d9752b320d470a04501f0026441b15e3fceca773 SHA1 5d4ecb1880fd4e22e8c2befd1b0aae388b44b288 SHA256 cb71852050d75e23c3acd9b8364737b90117f003e29db17ab5f30c4735481e99
-MISC ChangeLog 1896 RMD160 086f979c2d71572436d94aae7060b4f87b07113c SHA1 5a513da045f5a58b37e1ee062442c9e4e528b26d SHA256 bddbb36407f1c784420b24c317f09770ed72cc047d85c9aa2cded84db392764f
+EBUILD snes9x-gtk-1.51_p75.ebuild 1253 RMD160 d9752b320d470a04501f0026441b15e3fceca773 SHA1 5d4ecb1880fd4e22e8c2befd1b0aae388b44b288 SHA256 cb71852050d75e23c3acd9b8364737b90117f003e29db17ab5f30c4735481e99
+MISC ChangeLog 1987 RMD160 38b20ed4efd3d21ef0b6ea797ebac3ad2bb2889c SHA1 f1a569eaf4541851bccee0c49c2235313641618f SHA256 535fca74a0764c04cfacbb56a79260e227b9acca0cb1048bce533c52f22a8574
 MISC metadata.xml 429 RMD160 e989b45bc0cab3e17cac7c1be9e1fe9870360f62 SHA1 cb2a3b86ae0263528cc264a49284970ebfb59e34 SHA256 ef699c4686427718434f4be182f5bdd768c54f118cc920224ce0f256aa8390d5
