@@ -2,6 +2,10 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  31 Aug 2009; Michał Ziąbkowski <mziab@o2.pl>
+  +snes9x-gtk-1.51_p75.ebuild:
+  Bumped.
+
   20 Jul 2009; Michał Ziąbkowski <mziab@o2.pl>
   +snes9x-gtk-1.51_p74.ebuild:
   Bumped.
